test(resource-gateway): certify DSL repair workflow